[package]
name = "youtrmr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.8.4"
regex = "1"
indicatif = "0.16.2"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"

